# django_rec_book

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
examples/: celery_app.py  singature.py
k8s/: configs.yaml  deployment.yaml  migration-job.yaml  postgresql-service.yaml  redis-statefulset.yaml  secrets.yaml  services.yaml  statefulset-postgresql.yaml
src/: download_movies_script.py  nltk_download.py
src/api_auth/: urls.py
src/books/: models.py  serializers.py  urls.py  views.py
src/books/migrations/: 0001_initial.py  0002_alter_book_isbn.py
src/books/tests/: factories.py  test_api.py  test_serializer.py
src/health/: urls.py  views.py
src/movies/: admin.py  api.py  middlewares.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py
src/movies/migrations/: 0001_initial.py  0002_movie_year.py  0003_remove_movie_year_movie_country_movie_extra_data_and_more.py  0004_usermoviepreferences.py  0005_alter_movie_release_year.py  0006_alter_movie_country.py  0007_alter_movie_country.py
src/movies/tests/: factories.py  test_api.py  test_serializers.py  test_services.py  test_tasks.py
src/recommendation_system/: asgi.py  base.py  celery.py  dev.py  production.py  production_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
src/recommendations/: services.py
src/recommendations/tests/: test_services.py
