[project]
name = "rec-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "factory-boy>=3.3.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"] 
DJANGO_SETTINGS_MODULE = "recommendation_system.settings"