[project]
name = "rec-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3<1.36.0",
    "celery>=5.6.2",
    "django>=6.0",
    "django-ratelimit>=4.1.0",
    "django-storages[boto3]>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "nltk>=3.9.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "factory-boy>=3.3.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "requests>=2.32.5",
    "ruff>=0.14.9",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"] 
DJANGO_SETTINGS_MODULE = "recommendation_system.settings"
